[package]
name = "display_icc"
version = "0.1.0"
edition = "2021"
description = "Cross-platform library for retrieving display ICC profiles"
license = "MIT"
repository = "https://github.com/ulalume/display_icc"
keywords = ["icc", "color", "display", "profile", "cross-platform"]
categories = ["multimedia::images", "os"]

[dependencies]
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi", "winreg"] }

[features]
default = []
dbus-support = ["dbus"]

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
serial_test = "3.0"

[[bin]]
name = "display_icc"
path = "src/main.rs"
required-features = []

# Example applications demonstrating library usage
[[example]]
name = "simple_cli"
path = "examples/simple_cli.rs"
doc-scrape-examples = true

[[example]]
name = "gui_integration"
path = "examples/gui_integration.rs"
doc-scrape-examples = true

[[example]]
name = "cross_platform_testing"
path = "examples/cross_platform_testing.rs"
doc-scrape-examples = true
